crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__quote_type_aliases_typing-only-third-party-import_quote4.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
quote4.py:30:24: TC002 [*] Move third-party import `pandas.DataFrame` into a type-checking block
   |
28 |     from typing import TypeAlias
29 | 
30 |     from pandas import DataFrame
   |                        ^^^^^^^^^ TC002
31 | 
32 |     x: TypeAlias = DataFrame | None
   |
   = help: Move into type-checking block

ℹ Unsafe fix
   1  |+from typing import TYPE_CHECKING
   2  |+
   3  |+if TYPE_CHECKING:
   4  |+    from pandas import DataFrame
1  5  | def f():
2  6  |     from pandas import DataFrame
3  7  | 
--------------------------------------------------------------------------------
27 31 | def f():
28 32 |     from typing import TypeAlias
29 33 | 
30    |-    from pandas import DataFrame
31 34 | 
32    |-    x: TypeAlias = DataFrame | None
   35 |+    x: TypeAlias = "DataFrame | None"
33 36 | 
34 37 | 
35 38 | def f():
