crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__quote_typing-only-third-party-import_quote4.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
quote4.py:2:24: TC002 [*] Move third-party import `pandas.DataFrame` into a type-checking block
  |
1 | def f():
2 |     from pandas import DataFrame
  |                        ^^^^^^^^^ TC002
3 |
4 |     def baz() -> DataFrame[int]:
  |
  = help: Move into type-checking block

ℹ Unsafe fix
1   |-def f():
  1 |+from typing import TYPE_CHECKING
  2 |+
  3 |+if TYPE_CHECKING:
2 4 |     from pandas import DataFrame
  5 |+def f():
3 6 | 
4   |-    def baz() -> DataFrame[int]:
  7 |+    def baz() -> "DataFrame[int]":
5 8 |         ...
6 9 | 
7 10 | 

quote4.py:30:24: TC002 [*] Move third-party import `pandas.DataFrame` into a type-checking block
   |
28 |     from typing import TypeAlias
29 |
30 |     from pandas import DataFrame
   |                        ^^^^^^^^^ TC002
31 |
32 |     x: TypeAlias = DataFrame | None
   |
   = help: Move into type-checking block

ℹ Unsafe fix
   1  |+from typing import TYPE_CHECKING
   2  |+
   3  |+if TYPE_CHECKING:
   4  |+    from pandas import DataFrame
1  5  | def f():
2  6  |     from pandas import DataFrame
3  7  | 
--------------------------------------------------------------------------------
27 31 | def f():
28 32 |     from typing import TypeAlias
29 33 | 
30    |-    from pandas import DataFrame
31 34 | 
32    |-    x: TypeAlias = DataFrame | None
   35 |+    x: TypeAlias = "DataFrame | None"
33 36 | 
34 37 | 
35 38 | def f():

quote4.py:49:24: TC002 [*] Move third-party import `pandas.DataFrame` into a type-checking block
   |
47 |     from typing import cast
48 |
49 |     from pandas import DataFrame
   |                        ^^^^^^^^^ TC002
50 |
51 |     from .foo import get_foo
   |
   = help: Move into type-checking block

ℹ Unsafe fix
   1  |+from typing import TYPE_CHECKING
   2  |+
   3  |+if TYPE_CHECKING:
   4  |+    from pandas import DataFrame
1  5  | def f():
2  6  |     from pandas import DataFrame
3  7  | 
--------------------------------------------------------------------------------
46 50 | def f():
47 51 |     from typing import cast
48 52 | 
49    |-    from pandas import DataFrame
50 53 | 
51 54 |     from .foo import get_foo
52 55 | 
53    |-    foo = cast(DataFrame, get_foo())
   56 |+    foo = cast("DataFrame", get_foo())
54 57 | 
55 58 | 
56 59 | def f():
