crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__quoted-type-alias_TC008.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC008.pyi:7:16: TC008 [*] Remove quotes from type alias
  |
5 | from foo import Foo
6 | 
7 | a: TypeAlias = 'int'  # TC008
  |                ^^^^^ TC008
8 | b: TypeAlias = 'Foo'   # TC008
9 | c: TypeAlias = 'Foo[str]'  # TC008
  |
  = help: Remove quotes

ℹ Safe fix
4 4 | 
5 5 | from foo import Foo
6 6 | 
7   |-a: TypeAlias = 'int'  # TC008
  7 |+a: TypeAlias = int  # TC008
8 8 | b: TypeAlias = 'Foo'   # TC008
9 9 | c: TypeAlias = 'Foo[str]'  # TC008
10 10 | d: TypeAlias = 'Foo.bar'  # TC008

TC008.pyi:8:16: TC008 [*] Remove quotes from type alias
   |
 7 | a: TypeAlias = 'int'  # TC008
 8 | b: TypeAlias = 'Foo'   # TC008
   |                ^^^^^ TC008
 9 | c: TypeAlias = 'Foo[str]'  # TC008
10 | d: TypeAlias = 'Foo.bar'  # TC008
   |
   = help: Remove quotes

ℹ Safe fix
5 5 | from foo import Foo
6 6 | 
7 7 | a: TypeAlias = 'int'  # TC008
8   |-b: TypeAlias = 'Foo'   # TC008
  8 |+b: TypeAlias = Foo   # TC008
9 9 | c: TypeAlias = 'Foo[str]'  # TC008
10 10 | d: TypeAlias = 'Foo.bar'  # TC008
11 11 | e: TypeAlias = 'Baz'  # OK

TC008.pyi:9:16: TC008 [*] Remove quotes from type alias
   |
 7 | a: TypeAlias = 'int'  # TC008
 8 | b: TypeAlias = 'Foo'   # TC008
 9 | c: TypeAlias = 'Foo[str]'  # TC008
   |                ^^^^^^^^^^ TC008
10 | d: TypeAlias = 'Foo.bar'  # TC008
11 | e: TypeAlias = 'Baz'  # OK
   |
   = help: Remove quotes

ℹ Safe fix
6  6  | 
7  7  | a: TypeAlias = 'int'  # TC008
8  8  | b: TypeAlias = 'Foo'   # TC008
9     |-c: TypeAlias = 'Foo[str]'  # TC008
   9  |+c: TypeAlias = Foo[str]  # TC008
10 10 | d: TypeAlias = 'Foo.bar'  # TC008
11 11 | e: TypeAlias = 'Baz'  # OK
12 12 | 

TC008.pyi:10:16: TC008 [*] Remove quotes from type alias
   |
 8 | b: TypeAlias = 'Foo'   # TC008
 9 | c: TypeAlias = 'Foo[str]'  # TC008
10 | d: TypeAlias = 'Foo.bar'  # TC008
   |                ^^^^^^^^^ TC008
11 | e: TypeAlias = 'Baz'  # OK
   |
   = help: Remove quotes

ℹ Safe fix
7  7  | a: TypeAlias = 'int'  # TC008
8  8  | b: TypeAlias = 'Foo'   # TC008
9  9  | c: TypeAlias = 'Foo[str]'  # TC008
10    |-d: TypeAlias = 'Foo.bar'  # TC008
   10 |+d: TypeAlias = Foo.bar  # TC008
11 11 | e: TypeAlias = 'Baz'  # OK
12 12 | 
13 13 | type B = 'Foo'  # TC008

TC008.pyi:13:10: TC008 [*] Remove quotes from type alias
   |
11 | e: TypeAlias = 'Baz'  # OK
12 | 
13 | type B = 'Foo'  # TC008
   |          ^^^^^ TC008
14 | type C = 'Foo[str]'  # TC008
15 | type D = 'Foo.bar'  # TC008
   |
   = help: Remove quotes

ℹ Safe fix
10 10 | d: TypeAlias = 'Foo.bar'  # TC008
11 11 | e: TypeAlias = 'Baz'  # OK
12 12 | 
13    |-type B = 'Foo'  # TC008
   13 |+type B = Foo  # TC008
14 14 | type C = 'Foo[str]'  # TC008
15 15 | type D = 'Foo.bar'  # TC008
16 16 | type E = 'Baz'  # TC008

TC008.pyi:14:10: TC008 [*] Remove quotes from type alias
   |
13 | type B = 'Foo'  # TC008
14 | type C = 'Foo[str]'  # TC008
   |          ^^^^^^^^^^ TC008
15 | type D = 'Foo.bar'  # TC008
16 | type E = 'Baz'  # TC008
   |
   = help: Remove quotes

ℹ Safe fix
11 11 | e: TypeAlias = 'Baz'  # OK
12 12 | 
13 13 | type B = 'Foo'  # TC008
14    |-type C = 'Foo[str]'  # TC008
   14 |+type C = Foo[str]  # TC008
15 15 | type D = 'Foo.bar'  # TC008
16 16 | type E = 'Baz'  # TC008
17 17 | 

TC008.pyi:15:10: TC008 [*] Remove quotes from type alias
   |
13 | type B = 'Foo'  # TC008
14 | type C = 'Foo[str]'  # TC008
15 | type D = 'Foo.bar'  # TC008
   |          ^^^^^^^^^ TC008
16 | type E = 'Baz'  # TC008
   |
   = help: Remove quotes

ℹ Safe fix
12 12 | 
13 13 | type B = 'Foo'  # TC008
14 14 | type C = 'Foo[str]'  # TC008
15    |-type D = 'Foo.bar'  # TC008
   15 |+type D = Foo.bar  # TC008
16 16 | type E = 'Baz'  # TC008
17 17 | 
18 18 | 

TC008.pyi:16:10: TC008 [*] Remove quotes from type alias
   |
14 | type C = 'Foo[str]'  # TC008
15 | type D = 'Foo.bar'  # TC008
16 | type E = 'Baz'  # TC008
   |          ^^^^^ TC008
   |
   = help: Remove quotes

ℹ Safe fix
13 13 | type B = 'Foo'  # TC008
14 14 | type C = 'Foo[str]'  # TC008
15 15 | type D = 'Foo.bar'  # TC008
16    |-type E = 'Baz'  # TC008
   16 |+type E = Baz  # TC008
17 17 | 
18 18 | 
19 19 | class Baz:

TC008.pyi:21:14: TC008 [*] Remove quotes from type alias
   |
19 | class Baz:
20 |     a: TypeAlias = 'Baz'  # False negative in stubs
21 |     type A = 'Baz'  # TC008
   |              ^^^^^ TC008
22 | 
23 |     class Nested:
   |
   = help: Remove quotes

ℹ Safe fix
18 18 | 
19 19 | class Baz:
20 20 |     a: TypeAlias = 'Baz'  # False negative in stubs
21    |-    type A = 'Baz'  # TC008
   21 |+    type A = Baz  # TC008
22 22 | 
23 23 |     class Nested:
24 24 |         a: TypeAlias = 'Baz'  # False negative in stubs

TC008.pyi:25:18: TC008 [*] Remove quotes from type alias
   |
23 |     class Nested:
24 |         a: TypeAlias = 'Baz'  # False negative in stubs
25 |         type A = 'Baz'  # TC008
   |                  ^^^^^ TC008
   |
   = help: Remove quotes

ℹ Safe fix
22 22 | 
23 23 |     class Nested:
24 24 |         a: TypeAlias = 'Baz'  # False negative in stubs
25    |-        type A = 'Baz'  # TC008
   25 |+        type A = Baz  # TC008
