crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__runtime-import-in-type-checking-block_TC004_12.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC004 [*] Move import `collections.abc.Callable` out of type-checking block. Import is used for more than type hinting.
 --> TC004_12.py:6:33
  |
5 | if TYPE_CHECKING:
6 |     from collections.abc import Callable
  |                                 ^^^^^^^^
7 |
8 | AnyCallable: TypeAlias = Callable[..., Any]
  |                          -------- Used at runtime here
help: Move out of type-checking block
  |
4 + from collections.abc import Callable
5 + 
6 | if TYPE_CHECKING:
7 ~     pass
  |
note: This is an unsafe fix and may change runtime behavior
