crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__runtime-import-in-type-checking-block_TC004_17.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC004 [*] Move import `pandas.DataFrame` out of type-checking block. Import is used for more than type hinting.
  --> TC004_17.py:6:24
   |
 5 | if TYPE_CHECKING:
 6 |     from pandas import DataFrame
   |                        ^^^^^^^^^
   |
  ::: TC004_17.py:10:9
   |
 9 | def example() -> DataFrame:
10 |     x = DataFrame()
   |         --------- Used at runtime here
help: Move out of type-checking block
  |
4 + from pandas import DataFrame
5 + 
6 | if TYPE_CHECKING:
7 ~     pass
  |
note: This is an unsafe fix and may change runtime behavior
