crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__runtime-import-in-type-checking-block_TC004_2.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC004 [*] Move import `datetime.date` out of type-checking block. Import is used for more than type hinting.
 --> TC004_2.py:4:26
  |
3 | if TYPE_CHECKING:
4 |     from datetime import date
  |                          ^^^^
  |
 ::: TC004_2.py:8:12
  |
7 | def example():
8 |     return date()
  |            ---- Used at runtime here
help: Move out of type-checking block
  |
2 + from datetime import date
3 + 
4 | if TYPE_CHECKING:
5 ~     pass
  |
note: This is an unsafe fix and may change runtime behavior
